--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "790904cd",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -22,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf585d6",
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da57e0dd",
    "metadata": {},
    "source": [
     "If the output is unclear, you can launch a Terminal session by clicking on `File` $\\rightarrow$ `New` $\\rightarrow$ `Terminal` or by following the steps as shown:\n",
@@ -68,7 +65,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834ce08c-dd54-46b2-a511-461c770a60bf",
    "metadata": {},
    "source": [
     "Qualitatively, the bandwidth and latency vary with the topology as follows:\n",
@@ -90,7 +86,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec914fa9-24b6-4200-9dc3-55571196fe5b",
    "metadata": {},
    "source": [
     "## Performance variation due to system topology\n",
@@ -101,7 +96,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93961dbc",
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f5d159",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -174,7 +167,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212a8dfc",
    "metadata": {
     "scrolled": true
    },
@@ -185,7 +177,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83369c1b",
    "metadata": {},
    "source": [
     "Now, let's run the benchmark:"
@@ -194,7 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59eeb793",
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +195,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b584f5ef",
    "metadata": {},
    "source": [
     "The first part of the benchmark gives device information and P2P access available from each GPU (similar to `nvidia-smi topo -m` command). Next, the benchmark measures the unidirectional and bidirectional bandwidth and latency with P2P disabled and enabled.\n",
@@ -290,17 +279,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
