--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/cuda_aware.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/cuda_aware.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a89881ae",
    "metadata": {},
    "source": [
     "\n",
@@ -95,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc26c72-da9f-41b5-af92-e67186bb04a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +102,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93fe9e4c-f672-49d2-9c2f-3f6e670ed395",
    "metadata": {},
    "source": [
     "Ensure there are no compilation errors. Now, let us validate the program with a smaller size grid using half a node.\n",
@@ -121,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa238e70-ef63-4745-a5bf-87277bc84aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +126,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e98b26-8612-4751-9a9f-6a8b28d53610",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -166,7 +161,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "796eb9dc-0290-4a72-9a8f-47b48525aee6",
    "metadata": {
     "tags": []
    },
@@ -177,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93c240b-95e5-49c5-b479-cebea50d317b",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -224,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63a28d5b-cfa0-433e-bfc4-0fca0e435919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +225,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710b4355-1f26-4f4a-8bbe-2c7a96ae5ce3",
    "metadata": {},
    "source": [
     "<mark>**NOTE:**</mark> if you are intersted to view the profiler report via the GUI, please download the files from the `../../source_code/mpi/output_profiler/` folder and import them to the Nsight System. You can also view the slurm output to view the report via the jupyter tab. The slurm output is located at `../../source_code/mpi/` and the file format is `slurm-{job id}.out`.\n",
@@ -280,7 +271,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bea7e30-6e4b-46b8-97d0-738a26eb88b1",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -318,7 +308,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84fe3d27-bdf4-4257-93ea-1d868f4edc14",
    "metadata": {},
    "source": [
     "As seen in the above example outputs, the computation time increases considerably. On DGX system with 8 Tesla V100, it is an increase of about $25\\%$ from 1.08s to 1.36s. \n",
@@ -362,17 +351,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
