--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/memcpy.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed9d6f0d-cfa6-4ffd-b970-bee700bf1a90",
    "metadata": {},
    "source": [
     "\n",
@@ -156,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc91192-7b4f-4fc3-8220-d554b11793ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd0ae58-b7bf-432d-8ced-367daaefbc7d",
    "metadata": {},
    "source": [
     "Ensure there are no compilation errors. Now, let us validate the program. \n",
@@ -184,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40a9af3-5e75-4816-9620-903eb8c3560c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +189,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9bc18c9-a836-4503-a874-327293fd7d0b",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -252,7 +247,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0765be26-807b-4ee5-ae75-9e9a6a14c293",
    "metadata": {},
    "source": [
     "We can also use the `--map-by ppr:8:node:4:socket` flag with `mpirun`. This allows us to specify the number of processes per socket as well as the number of processes per node. This should result in the same execution and results. \n",
@@ -262,7 +256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0195bca-b3a2-4011-b971-facfdae44b8e",
    "metadata": {},
    "source": [
     "Example commands to run the executable using `srun` on multinode (if recourses permit)\n",
@@ -273,7 +266,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f62d8e-3584-414e-9203-e4d24961c2bc",
    "metadata": {},
    "source": [
     "If we re-run the executable with and without the `--map-by ppr:8:node:4:socket` flag and compare the results, we notice the increase in multi-node execution time and corresponding decrease in efficiency. Check the below partial results obtained for $16K\\times32K$ grid size over 2 nodes:\n",
@@ -315,7 +307,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37547338-af62-4329-b65c-9b2c0b45130f",
    "metadata": {},
    "source": [
     "When we check the bindings, the output may seem cluttered. Let's look at the partial output from ranks 0 and 1:\n",
@@ -380,7 +371,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c5791f2-169a-4394-a640-226b365b0ff8",
    "metadata": {},
    "source": [
     "### Profiling\n",
@@ -401,7 +391,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240eb445-a49b-4f5c-b1f1-a3637df7fee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +399,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89cc9bd-aed4-4ae4-bd5c-ae4698d44d92",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/mpi/output_profiler/jacobi_memcpy_mpi_report.nsys-rep) and choosing Save Link As. Once done open the report via the GUI.\n",
@@ -455,17 +443,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
