--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/multi_node_intro.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/multi_node_intro.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "403d97bc",
    "metadata": {},
    "source": [
     "# Learning objectives\n",
@@ -87,7 +86,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d417a3c-38f5-4868-b76e-078e7765ce72",
    "metadata": {},
    "source": [
     "Ensure that MPI is installed (for exmaple, if it is built from source) and available (for example, if loaded as a module) using the folllowing command:"
@@ -96,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c22608b5-d8b7-4f33-a809-abee9f0a86eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +102,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f1e8e6c-68f5-4c8c-8efa-271aa8663246",
    "metadata": {},
    "source": [
     "Expected output:\n",
@@ -122,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9623db94-2347-4bbb-968b-50734c2dad4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +126,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62038a8-31e6-4000-a9f0-a3869a0191b7",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -145,7 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd02fbfd-8283-4241-a5e1-1fda65bf933b",
    "metadata": {},
    "source": [
     "The `-np` option specifies the total number of processes spawned by MPI runtime and `-npersocket` option specifies the number of processes to be spawned on each socket. The `-hostfile` option allows us to specify which hosts (compute nodes) to start MPI processes on. The file is a newline-separated list of hostnames which must be accessible to each other so that MPI processes can communicate.\n",
@@ -164,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaca797d-dcc6-47cc-9c11-85fa542319b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121340df-bdb7-41e3-8620-80254b4e28cc",
    "metadata": {},
    "source": [
     "You may see some warnings. As long as the output is printed, you can ignore the warnings. In the output, you should see 2 unique ranks ranging (0 and 1) and the node's name like below:\n",
@@ -214,7 +205,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10545c83-f162-42e6-a6b3-7df46cb109a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +213,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa026d1c-df9c-43d8-853d-d0b8d7a620ff",
    "metadata": {},
    "source": [
     "The output, excluding warnings, should be as follows (the order of output lines is not important):\n",
@@ -294,17 +283,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
