--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/single_gpu/single_gpu_overview.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/single_gpu/single_gpu_overview.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39ad569e",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -94,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb46488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f97f825b",
    "metadata": {},
    "source": [
     "We will now compile the code:"
@@ -112,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eac2daf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33345661",
    "metadata": {},
    "source": [
     "Now, let us execute the program: "
@@ -130,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e234f430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bb863e",
    "metadata": {},
    "source": [
     "The output reports the norm value every 100 iterations and the total execution time of the Jacobi Solver. The expected output is:\n",
@@ -232,7 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9a8109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +233,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db3c3c7",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/single_gpu/jacobi_report.nsys-rep) and choosing Save Link As. Once done open the report via the GUI. This is the analysis step. Right click on the NVTX tab and select the Events View.\n",
@@ -268,17 +259,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
