--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4ddba18",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -48,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49697bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +55,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d045bd",
    "metadata": {
     "tags": []
    },
@@ -152,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6dc6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +157,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "698ab130",
    "metadata": {},
    "source": [
     "Ensure there are no compiler warnings or errors. Validate the implementation by running the binary:"
@@ -170,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50debc4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +173,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e276f70",
    "metadata": {
     "tags": []
    },
@@ -201,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3187cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +202,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ac727d",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/cuda/jacobi_memcpy_report.nsys-rep) and and choosing Save Link As. Once done open the report via the GUI. In the profiler timeline, the first few seconds denote the single-GPU code running on one of the GPUs. This version is executed so we can compare the multi-GPU version with it. Let's analyze the multi-GPU timeline.\n",
@@ -260,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df791d43-04e7-4cf4-872c-9bea51c3d78c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +259,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afbc209",
    "metadata": {},
    "source": [
     "The `topo` sub-command requests information on the GPU communication topology, `-p2p` flag requests P2P status, and `r` asks whether P2P reads are supported. Change `r` to `w` to check whether writes are supported. \n",
@@ -288,7 +277,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "755e980e-a936-4f72-850a-4c618216d1f2",
    "metadata": {},
    "source": [
     "To check whether P2P via NVLink is supported, run the command below (due to limited resources we try on 4 GPUs only):"
@@ -297,7 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aaf97ba-408a-4436-a1d6-07fadd2baf4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +293,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d84934b",
    "metadata": {
     "tags": []
    },
@@ -327,7 +313,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e8da79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +321,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd648c93",
    "metadata": {},
    "source": [
     "Ensure there are no compiler warnings or errors. Validate the implementation by running the binary with P2P enabled:"
@@ -345,7 +329,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed251978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +337,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1acc2cc0",
    "metadata": {
     "tags": []
    },
@@ -376,7 +358,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf3e8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +366,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e34b876-f0d1-4a23-a01e-fad8f8d9d0fe",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/cuda/jacobi_memcpy_p2p_report.nsys-rep) and choosing Save Link As. Once done open the report via the GUI. Check below for example outputs:\n",
@@ -405,7 +385,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b801eb0",
    "metadata": {},
    "source": [
     "**Solution:** The solution for this exercise is present in `source_code/memcpy/solutions` directory: [jacobi_memcpy.cu](../../source_code/cuda/solutions/jacobi_memcpy.cu)\n",
@@ -430,17 +409,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -454,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
