--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/streams.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/streams.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7c63ff6",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -110,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "003cf80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc33f19",
    "metadata": {},
    "source": [
     "Validate the implementation by running the binary:"
@@ -128,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71d5a98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442c832a",
    "metadata": {},
    "source": [
     "We tested the code on a DGX system with 8 A100 GPUs, and we got the following output: \n",
@@ -157,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0fd7b2",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -169,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f5bf5e",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/cuda/jacobi_streams_p2p_report.nsys-rep) and choosing Save Link As. Once done open the report via the GUI. Total time between two Jacobi iterations as shown below.\n",
@@ -251,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b299e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +252,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9b942c7",
    "metadata": {},
    "source": [
     "Validate the implementation by running the binary with and without P2P:"
@@ -269,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e57643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +268,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70e07a9",
    "metadata": {
     "tags": []
    },
@@ -307,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c910f6f-f58c-4d3b-ab37-49dbc4112751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +304,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e330889-77e3-4fe3-9782-b4a13425c9bb",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/cuda/jacobi_streams_events_p2p_report.nsys-rep) and choosing Save Link As. Once done open the report via the GUI.\n",
@@ -351,15 +338,15 @@
     "\n",
     "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
     "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
