--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/containers_and_mpi.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/containers_and_mpi.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f6d39194-10b6-440e-a133-d7b8f1a0a662",
    "metadata": {},
    "source": [
     "# MPI in a containerized environment\n",
@@ -58,7 +57,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1214d3e5-a2ac-4388-a9bc-ed8d4c8ee7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +65,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4473aca-31e2-4c3f-b3c7-d08003be7219",
    "metadata": {},
    "source": [
     "## Execution\n",
@@ -80,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abad08ad-8f03-401d-a7e4-9036e7b0c6e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +85,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f4967e-fed7-464f-80c4-e22e270f5b68",
    "metadata": {},
    "source": [
     "You may see some warnings (like `...UCX  WARN  transport 'gdr_copy' is not available...`). As long as the output is printed, you can ignore the warnings. Optionally, you can add `-x UCX_TLS=rc,mm,cuda_copy,cuda_ipc` flag after `mpirun` command to suppress the warning. We will discuss the flag in subsequent labs.\n",
@@ -143,7 +138,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af7d6bce-b229-4a8f-9466-5026df60450d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +146,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f9aaac-df28-47d2-86ba-97c40e9c890e",
    "metadata": {},
    "source": [
     "Now, run the program binary with 16 processes across 2 nodes as follows:\n",
@@ -201,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c766cbb-923d-4ccb-85a8-5066dcb0ad63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +202,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960c2438-8c4e-4acb-b445-ccbf6eecc091",
    "metadata": {},
    "source": [
     "Now that our system setup is functional, click below to go to HOME (Introduction) and begin MPI labs:\n",
@@ -219,15 +210,15 @@
     "\n",
     "---\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n",
+    " "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
