--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nvshmem/nvshmem.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nvshmem/nvshmem.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b016bc32-95ed-4298-a475-0b2209ec8c1a",
    "metadata": {},
    "source": [
     "# The NVSHMEM Library\n",
@@ -164,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4014e6ed-f149-4dff-a2a5-ff153dd837c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a850fb91-550c-4c4b-b138-a668e9567f87",
    "metadata": {},
    "source": [
     "**To run the program using `mpirun` command with 4 ranks and 1 rank per socket, use `mpirun -np 4 --map-by ppr:1:socket ./left_shift` using 2 nodes (16 GPUs).** Due to limited resources, we run using 2 GPUs."
@@ -182,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e749dba4-d43f-46ec-91ea-2c89ac573346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +187,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26143083-365b-4812-b224-bd4031a2602d",
    "metadata": {},
    "source": [
     "Ensure that the output is consistent with the explanation provided above. \n",
@@ -317,7 +312,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7accf7-086d-4bd3-a306-386cc748b453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +320,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442de3fb-0217-405d-aff4-c07f90f5835e",
    "metadata": {},
    "source": [
     "Ensure that there are no errors. Now, validate your implementation by running the program binary. Due to limited resources, we will be using smaller grid ($2K\\times4K$) using 2 GPUs.\n",
@@ -338,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeffc5c3-8ddc-4ed9-8b5a-d5c4f8553522",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -351,7 +343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbee757b-4b55-433c-9888-db990c393f69",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -383,7 +374,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b1d0002-39b8-4fd6-a954-b9997bff7eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +382,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8c955c-5acc-4e4b-af16-81d14482a6b6",
    "metadata": {},
    "source": [
     "### DGX system with 8 Ampere A100\n",
@@ -432,7 +421,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e34ffe-035f-4611-b0d0-862e5942a630",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -444,7 +432,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b62965-149a-43a3-9d12-d1919cbadefd",
    "metadata": {},
    "source": [
     "To view the profiler report, you would need to Download and save the report file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../../source_code/nvshmem/output_profiler/jacobi_nvshmem_report.nsys-rep) and choosing Save Link As. Once done open the report via the GUI. Notice that most NVSHMEM calls are available in NVTX Push-Pop stats on the CLI output. Please note the screenshot shows an example profiler output for a larger grid size.\n",
@@ -471,25 +458,16 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbde481a-209d-42c4-aab6-fbf72027f2d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
