--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Competition.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Competition.ipynb
@@ -264,7 +264,7 @@
     "\n",
     "## ~~ Change Optimizer or Parameters Here\n",
     "# Optimizer\n",
-    "sgd = tensorflow.keras.optimizers.SGD(lr=0.001, decay=1e-6, momentum=0.9)\n",
+    "sgd = tensorflow.keras.optimizers.legacy.SGD(lr=0.001, decay=1e-6, momentum=0.9)\n",
     "## ~~ Change Optimizer or Parameters Here\n",
     "\n",
     "#Compile Model with Loss Function , Optimizer and Metrics\n",
@@ -396,7 +396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,9 +410,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
